finished the rest by adding the skeleton graphics and the audio

--- a/spooky card/spooky card.csproj
+++ b/spooky card/spooky card.csproj
@@ -85,5 +85,14 @@
   <ItemGroup>
     <None Include="Resources\doot doot.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mts.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Exclamation Point %28!%29 Metal Gear Solid Sound Effect.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Wilhelm Scream sound effect.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
